* начата работа над навигатором (трекером)

--- a/www/map.html
+++ b/www/map.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col p-0">
-            <div id="map" style="width: 100vh; height: 100vh"></div>
+        <div class="col p-0 border">
+            <div id="map"></div>
         </div>
     </div>
 </div>
