--- a/www/index.html
+++ b/www/index.html
@@ -1,43 +1,25 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Trail Tracker</title>
 
-        <script src="https://api-maps.yandex.ru/v3/?apikey=137ef6a7-52e7-45e6-8fb9-a04ffa009134&lang=ru_RU"></script>
+        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.4/page.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <!--<script src="../node_modules/jquery/dist/jquery.js"></script>
-        <script src="../node_modules/page/page.js"></script>
-        <script src="../node_modules/hammerjs/hammer.min.js"></script>-->
-        <script src="js/index.js"></script>
+        <!--<script src="js/jquery/dist/jquery.js"></script>
+        <script src="js/page/page.js"></script>
+        <script src="js/hammerjs/hammer.min.js"></script>-->
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="css/index.css">
         <!--<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">-->
-        <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body class="wrapper">
@@ -90,6 +72,8 @@
             </div>
         </footer>
 
+        <script src="cordova.js"></script>
+        <script src="js/index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
         <!--<script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
