* работа над отображением карт

--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Trail Tracker</title>
 
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+
         <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.4/page.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
@@ -40,13 +42,13 @@
         </main>
 
         <footer class="pt-3">
-            <div class="container mt-2">
+            <div class="container">
                 <div class="row">
                     <div class="col d-flex">
                         <div class="text-center m-auto">
                             <a href="/" class="link-body-emphasis text-decoration-none text-dark">
                                 <i class="bi bi-map"></i>
-                                <p><small>Походы</small></p>
+                                <p style="font-size: 12px"><small>Походы</small></p>
                             </a>
                         </div>
                     </div>
@@ -55,7 +57,7 @@
                         <div class="text-center m-auto">
                             <a href="/info" class="link-body-emphasis text-decoration-none text-dark">
                                 <i class="bi bi-info-circle-fill"></i>
-                                <p><small>База знаний</small></p>
+                                <p style="font-size: 12px"><small>База знаний</small></p>
                             </a>
                         </div>
                     </div>
@@ -64,7 +66,7 @@
                         <div class="text-center m-auto">
                             <a href="/profile" class="link-body-emphasis text-decoration-none text-dark">
                                 <i class="bi bi-person-circle"></i>
-                                <p><small>Профиль</small></p>
+                                <p style="font-size: 12px"><small>Профиль</small></p>
                             </a>
                         </div>
                     </div>
