--- a/www/map.html
+++ b/www/map.html
@@ -1,6 +1,11 @@
 <div class="container">
     <div class="row">
-        <div class="col p-0 border">
+        <div class="col" id="information">
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col p-0">
             <div id="map"></div>
         </div>
     </div>
