--- a/www/index.html
+++ b/www/index.html
@@ -7,21 +7,19 @@
 
         <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 
-        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
-
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.4/page.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
         <script src="js/jquery/dist/jquery.js"></script>
         <script src="js/page/page.js"></script>
         <script src="js/hammerjs/hammer.min.js"></script>
+        <script src="js/gpx-parse/dist/gpx-parse-browser.js" type="text/javascript"></script>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">-->
+        <link href="fw/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="fw/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
-        <!--<link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">-->
     </head>
 
     <body class="wrapper">
@@ -75,12 +73,12 @@
         </footer>
 
         <script src="cordova.js"></script>
+        <script src="js/trackParser.js"></script>
         <script src="js/index.js"></script>
-        <script src="js/leaflet.rotatedMarker.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-        <!--<script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
+        <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>-->
+        <script src="fw/@popperjs/core/dist/umd/popper.min.js"></script>
+        <script src="fw/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
             let Tooltipelements = document.querySelectorAll("[data-bs-toggle='tooltip']");
             Tooltipelements.forEach((el) => {
