--- a/www/index.html
+++ b/www/index.html
@@ -13,12 +13,12 @@
         <script src="js/jquery/dist/jquery.js"></script>
         <script src="js/page/page.js"></script>
         <script src="js/hammerjs/hammer.min.js"></script>
-        <script src="js/gpx-parse/dist/gpx-parse-browser.js" type="text/javascript"></script>
+        <script src="../node_modules/gpx-parse/dist/gpx-parse-browser.js" type="text/javascript"></script>
 
         <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">-->
-        <link href="fw/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="fw/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+        <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
     </head>
 
@@ -73,12 +73,13 @@
         </footer>
 
         <script src="cordova.js"></script>
+        <script src="js/borderParser.js"></script>
         <script src="js/trackParser.js"></script>
         <script src="js/index.js"></script>
         <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>-->
-        <script src="fw/@popperjs/core/dist/umd/popper.min.js"></script>
-        <script src="fw/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
             let Tooltipelements = document.querySelectorAll("[data-bs-toggle='tooltip']");
             Tooltipelements.forEach((el) => {
