update 09.06.2024 - работы над картой

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,11 @@
                 <input type="text" id="photoComment" placeholder="Enter comment">
                 <button id="savePhoto">Save</button>
                 <button id="cancelPhoto">Cancel</button>
-                <p id="testField"></p>
+                <div class="row">
+                    <div class="col">
+                        <p id="test"></p>
+                    </div>
+                </div>
             </div>
         </div>
 
