--- a/www/main.html
+++ b/www/main.html
@@ -1,5 +1,70 @@
 <div class="container">
     <div class="row">
+        <div class="col-12">
+
+            <div id="nalychevo" class="card visota-kartozrki border border-0 rounded-3" style="overflow: hidden">
+                <a href="/nalychevo">
+                    <div class="card-body">
+                        <div class="card-zagolovok">
+                            <h5 class="card-title">НАЛЫЧЕВО</h5>
+                            <h6 class="card-podzagolovok">природный парк</h6>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <div id="south-camchatskiy" class="card visota-kartozrki border border-0 rounded-3" style="overflow: hidden">
+                <div class="card-body">
+                    <div class="card-zagolovok">
+                        <h5 class="card-title text-uppercase">Южно-Камчатский</h5>
+                        <h6 class="card-podzagolovok">природный парк</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div id="bistrinskiy" class="card visota-kartozrki border border-0 rounded-3" style="overflow: hidden">
+                <div class="card-body">
+                    <div class="card-zagolovok">
+                        <h5 class="card-title text-uppercase">Быстринский</h5>
+                        <h6 class="card-podzagolovok">природный парк</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div id="kluchevskoy" class="card visota-kartozrki border border-0 rounded-3" style="overflow: hidden">
+                <div class="card-body">
+                    <div class="card-zagolovok">
+                        <h5 class="card-title text-uppercase">Ключевской</h5>
+                        <h6 class="card-podzagolovok">природный парк</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div id="viluchenskiy" class="card visota-kartozrki border border-0 rounded-3" style="overflow: hidden">
+                <div class="card-body">
+                    <div class="card-zagolovok">
+                        <h5 class="card-title text-uppercase">Вилюченский</h5>
+                        <h6 class="card-podzagolovok">природный парк</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div id="koly-river" class="card visota-kartozrki border border-0 rounded-3" style="overflow: hidden">
+                <div class="card-body">
+                    <div class="card-zagolovok">
+                        <h5 class="card-title text-uppercase">Река Коль</h5>
+                        <h6 class="card-podzagolovok">Лососевый заказник</h6>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!--
+<div class="container">
+    <div class="row">
         <div class="col">
 
             <div class="row">
@@ -164,4 +229,4 @@
 
         </div>
     </div>
-</div>
+</div>-->
