--- a/www/index.html
+++ b/www/index.html
@@ -17,14 +17,14 @@
 
         <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">-->
-        <link href="fw/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="fw/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+        <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
         <link rel="stylesheet" href="css/index.css">
     </head>
 
     <body class="wrapper cvet_fona">
 
-        <header class="container p-3">
+        <header class="container p-3 cvet_shapka">
             <div class="row">
                 <div class="col d-flex">
                     <!--<img class="my-auto" rel="image not found" src="img/f_logo.webp" width="32" height="32" alt="...">-->
@@ -53,7 +53,7 @@
 
         </main>
 
-        <footer class="m-0 p-0">
+        <footer class="m-0 p-0 cvet_shapka">
             <div class="container p-3">
                 <div id="footerRow" class="row row-cols-4">
 
@@ -93,8 +93,8 @@
         <script src="js/index.js"></script>
         <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>-->
-        <script src="fw/@popperjs/core/dist/umd/popper.min.js"></script>
-        <script src="fw/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script>
             let Tooltipelements = document.querySelectorAll("[data-bs-toggle='tooltip']");
             Tooltipelements.forEach((el) => {
