--- a/www/nalychevo.html
+++ b/www/nalychevo.html
@@ -3,7 +3,7 @@
         <div class="col-12 bk_stat">
 
             <div class="marshrut">
-                <h1 class="osn-zagolovok-mars">Природный парк «Налычево»</h1>
+                <h1 class="podzagolovok-mars_bc_green">Природный парк «Налычево»</h1>
                 <h2 class="zagolovok-mars">Туристические маршруты</h2>
                 <div class="marshrut card">
                     <h3 class="podzagolovok-mars">Паначево – кордон Центральный</h3>
