--- a/www/m-n-one.html
+++ b/www/m-n-one.html
@@ -3,10 +3,8 @@
         <div class="col-12">
             <h1 class="podzagolovok-mars_bc_green">Паначево – кордон Центральный</h1>
             <div class="d-grid">
-                <button class="btn btn-success m-top-bt text-knopki" type="button"> <i class="icon feather icon-compass"></i> Пройти маршрут</button>
+                <button class="btn btn-success m-top-bt text-knopki" type="button"> <i class="icon feather icon-compass fs-4"></i> Пройти маршрут</button>
             </div>
-
-
             <h2 class="podzagolovok-mars">1 день: Переход 17,5 км</h2>
             <p class="paragraph_marsh">
                 Маршрут начинается от инспекторского кордона и следует вдоль реки Пиначевская. Первой остановкой
