--- a/www/index.html
+++ b/www/index.html
@@ -10,10 +10,11 @@
         <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.4/page.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>-->
-        <script src="js/jquery/dist/jquery.js"></script>
-        <script src="js/page/page.js"></script>
-        <script src="js/hammerjs/hammer.min.js"></script>
+        <script src="js/jquery/dist/jquery.js" type="text/javascript"></script>
+        <script src="js/page/page.js" type="text/javascript"></script>
+        <script src="js/hammerjs/hammer.min.js" type="text/javascript"></script>
         <script src="js/gpx-parse/dist/gpx-parse-browser.js" type="text/javascript"></script>
+        <script src="js/file-saver/dist/FileSaver.min.js" type="text/javascript"></script>
 
         <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">-->
@@ -35,15 +36,24 @@
 
         <!-- HTML for the modal -->
         <div id="photoModal" class="modal">
-            <div class="modal-content">
-                <span class="close" id="closeModal">&times;</span>
-                <img id="photoPreview" src="" alt="Photo" style="max-width: 100%;">
-                <input type="text" id="photoComment" placeholder="Enter comment">
-                <button id="savePhoto">Save</button>
-                <button id="cancelPhoto">Cancel</button>
-                <div class="row">
-                    <div class="col">
-                        <p id="test"></p>
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Детали снимка</h5>
+                        <button id="closeModal" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="photo-container" style="position: relative; width: 100%; padding-bottom: 100%; overflow: hidden;">
+                            <img id="photoPreview" class="img-thumbnail" src="" alt="Photo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
+                        </div>
+                        <select type="text" class="form-select" id="photoComment">
+                            <option>Экологическая проблема</option>
+                            <option>Точка интереса</option>
+                        </select>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="cancelPhoto" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                        <button id="savePhoto" type="button" class="btn btn-primary">Сохранить</button>
                     </div>
                 </div>
             </div>
