--- a/www/bystrinsky.html
+++ b/www/bystrinsky.html
@@ -8,7 +8,21 @@
                 <div class="marshrut card">
                     <h3 class="podzagolovok-mars">Вулкашики</h3>
                     <p class="paragraph_marsh">
-                        Шлаковые конуса "Вулкашики"
+                        Маршрут начинается от гостиницы "Парамушир-Тур" и проходит через живописные ландшафты.
+                    </p>
+                </div>
+                <div class="marshrut card">
+                    <h3 class="podzagolovok-mars">Вулкан Дыгерен-Олегенде</h3>
+                    <p class="paragraph_marsh">
+                        Потухший вулкан — гора Оленгенде (или Дыгерен-Оленгенде) — возвышается на 1950 метров над
+                        уровнем моря. Местные жители считают её вулканом и говорят, что если он когда-нибудь пробудится,
+                        то последствия будут катастрофическими, и у них не будет времени спастись.
+                    </p>
+                </div>
+                <div class="marshrut card">
+                    <h3 class="podzagolovok-mars">Озеро Галямаки</h3>
+                    <p class="paragraph_marsh">
+                        Зимний маршрут к озеру Галямаки — это захватывающее приключение, позволяющее насладиться красотой снежных пейзажей и тишиной зимней природы.
                     </p>
                 </div>
             </div>
