--- a/www/kluchevskoy.html
+++ b/www/kluchevskoy.html
@@ -3,26 +3,10 @@
         <div class="col-12 bk_stat">
 
             <div class="marshrut">
-                <h1 class="podzagolovok-mars_bc_green">Природный парк «Налычево»</h1>
-                <h2 class="zagolovok-mars">Туристические маршруты</h2>
-                <div class="marshrut card">
-                    <h3 class="podzagolovok-mars">Паначево – кордон Центральный</h3>
+                <h1 class="podzagolovok-mars_bc_green">Ключевской природный парк</h1>
                     <p class="paragraph_marsh">
-                        Двухдневный маршрут в сердце долины Налычево. Один из самых популярных в парке.
+                       Ключевской природный парк – это уникальная территория, расположенная на востоке Камчатского полуострова. Парк славится своими величественными вулканами, нетронутыми ландшафтами и богатым биоразнообразием. Здесь находится самый высокий действующий вулкан Евразии – Ключевская сопка, высота которого составляет 4750 метров.
                     </p>
-                </div>
-                <div class="marshrut card">
-                    <h3 class="podzagolovok-mars">Пятая стройка – кордон Центральный</h3>
-                    <p class="paragraph_marsh">
-                        Маршрут от Петропавловска-Камчатского через корякский перевал и термальные источники в центр долины Налычево
-                    </p>
-                </div>
-                <div class="marshrut card">
-                    <h3 class="podzagolovok-mars">Кордон Центральный – Таловские источники – вулкан Дзендзур</h3>
-                    <p class="paragraph_marsh">
-                        Радиальный маршрут из центра долины Налычево, через горячие источники к вулкану Дзендзур.
-                    </p>
-                </div>
             </div>
 
         </div>
