update 11.06.2024 - настроен page.js на новые страницы

--- a/www/nalychevo.html
+++ b/www/nalychevo.html
@@ -4,25 +4,34 @@
 
             <div class="marshrut">
 
-                <h1 class="osn-zagolovok-mars">Природный парк «Налычево»</h1>
+                <h1 class="podzagolovok-mars_bc_green">Природный парк «Налычево»</h1>
                 <h2 class="zagolovok-mars">Туристические маршруты</h2>
+
                 <div class="marshrut card">
-                    <h3 class="podzagolovok-mars">Паначево – кордон Центральный</h3>
-                    <p class="paragraph_marsh">
-                        Двухдневный маршрут в сердце долины Налычево. Один из самых популярных в парке.
-                    </p>
+                    <a href="/m-n-one">
+                        <h3 class="podzagolovok-mars">Паначево – кордон Центральный</h3>
+                        <p class="paragraph_marsh">
+                            Двухдневный маршрут в сердце долины Налычево. Один из самых популярных в парке.
+                        </p>
+                    </a>
                 </div>
+
                 <div class="marshrut card">
-                    <h3 class="podzagolovok-mars">Пятая стройка – кордон Центральный</h3>
-                    <p class="paragraph_marsh">
-                        Маршрут от Петропавловска-Камчатского через корякский перевал и термальные источники в центр долины Налычево
-                    </p>
+                    <a href="/m-n-two">
+                        <h3 class="podzagolovok-mars">Пятая стройка – кордон Центральный</h3>
+                        <p class="paragraph_marsh">
+                            Маршрут от Петропавловска-Камчатского через корякский перевал и термальные источники в центр долины Налычево
+                        </p>
+                    </a>
                 </div>
+
                 <div class="marshrut card">
-                    <h3 class="podzagolovok-mars">Кордон Центральный – Таловские источники – вулкан Дзендзур</h3>
-                    <p class="paragraph_marsh">
-                        Радиальный маршрут из центра долины Налычево, через горячие источники к вулкану Дзендзур.
-                    </p>
+                    <a href="/m-n-three">
+                        <h3 class="podzagolovok-mars">Кордон Центральный – Таловские источники – вулкан Дзендзур</h3>
+                        <p class="paragraph_marsh">
+                            Радиальный маршрут из центра долины Налычево, через горячие источники к вулкану Дзендзур.
+                        </p>
+                    </a>
                 </div>
 
             </div>
