Количество участников группы

--- a/www/reka-kol.html
+++ b/www/reka-kol.html
@@ -4,9 +4,11 @@
 
             <div class="marshrut">
                 <h1 class="podzagolovok-mars_bc_green">Лососевый заказник река Коль</h1>
-                    <p class="paragraph_marsh">
-Лососевый заказник река Коль расположен на живописной территории Камчатского полуострова и является уникальным природоохранным объектом. Основной целью заказника является сохранение и восстановление популяций лососевых рыб, которые играют важную роль в экосистеме региона.
-                    </p>
+                <p class="paragraph_marsh">
+                    Лососевый заказник река Коль расположен на живописной территории Камчатского полуострова и является
+                    уникальным природоохранным объектом. Основной целью заказника является сохранение и восстановление
+                    популяций лососевых рыб, которые играют важную роль в экосистеме региона.
+                </p>
             </div>
 
         </div>
