update 11.06.2024 - настройка новых параметров

--- a/www/nalychevo.html
+++ b/www/nalychevo.html
@@ -1,39 +1,50 @@
 <div class="container">
     <div class="row">
-        <div class="col-12 bk_stat">
+        <div class="col-12">
 
-            <div class="marshrut">
+            <div class="row">
+                <div class="col bg-secondary-subtle py-3">
+                    <h3 class="text-center"><strong>Природный парк "Налычево"</strong></h3>
+                </div>
+            </div>
 
-                <h1 class="podzagolovok-mars_bc_green">Природный парк «Налычево»</h1>
-                <h2 class="zagolovok-mars">Туристические маршруты</h2>
+            <div class="row pt-3">
+                <div class="col">
+                    <p class="fs-4 text-white border-bottom border-white">Туристические маршруты</p>
+                </div>
+            </div>
 
-                <div class="marshrut card">
+            <div class="row rounded-3 bg-white mx-2 mt-3" style="overflow: hidden">
+                <div class="col">
                     <a href="/m-n-one">
                         <h3 class="podzagolovok-mars">Паначево – кордон Центральный</h3>
-                        <p class="paragraph_marsh">
+                        <p class="paragraph_marsh py-2">
                             Двухдневный маршрут в сердце долины Налычево. Один из самых популярных в парке.
                         </p>
                     </a>
                 </div>
+            </div>
 
-                <div class="marshrut card">
+            <div class="row rounded-3 bg-white mx-2 mt-3" style="overflow: hidden">
+                <div class="col">
                     <a href="/m-n-two">
                         <h3 class="podzagolovok-mars">Пятая стройка – кордон Центральный</h3>
-                        <p class="paragraph_marsh">
+                        <p class="paragraph_marsh py-2">
                             Маршрут от Петропавловска-Камчатского через корякский перевал и термальные источники в центр долины Налычево
                         </p>
                     </a>
                 </div>
+            </div>
 
-                <div class="marshrut card">
+            <div class="row rounded-3 bg-white mx-2 mt-3" style="overflow: hidden">
+                <div class="col">
                     <a href="/m-n-three">
                         <h3 class="podzagolovok-mars">Кордон Центральный – Таловские источники – вулкан Дзендзур</h3>
-                        <p class="paragraph_marsh">
+                        <p class="paragraph_marsh py-2">
                             Радиальный маршрут из центра долины Налычево, через горячие источники к вулкану Дзендзур.
                         </p>
                     </a>
                 </div>
-
             </div>
 
         </div>
