--- a/www/m-n-one.html
+++ b/www/m-n-one.html
@@ -1,39 +1,59 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h1 class="podzagolovok-mars_bc_green">Паначево – кордон Центральный</h1>
-            <div class="d-grid">
-                <button class="btn btn-success m-top-bt text-knopki" type="button"> <i class="icon feather icon-compass fs-4"></i> Пройти маршрут</button>
+            <div class="row">
+                <div class="col bg-secondary-subtle py-3">
+                    <p class="fs-4 text-center"><strong>Паначево – кордон Центральный</strong></p>
+                </div>
             </div>
-            <h2 class="podzagolovok-mars">1 день: Переход 17,5 км</h2>
-            <p class="paragraph_marsh">
-                Маршрут начинается от инспекторского кордона и следует вдоль реки Пиначевская. Первой остановкой
-                является стоянка «Промежуточная», до которой около 12 км. Затем еще 5,5 км до стоянки кордона
-                «Семеновский», где предусмотрена ночевка.
-            </p>
-            <h2 class="podzagolovok-mars">2 день: Переход 21 км</h2>
-            <p class="paragraph_marsh">
-                От кордона «Семеновский» начинается тропа к стоянке «Перевальная», расположенной в 4 км. Далее маршрут
-                проходит через каменистый распадок и горную тундру, поднимаясь к Пиначевскому перевалу с высотой 1150
-                метров. С перевала открывается великолепный вид на Налычевскую долину. Спуск проходит через кедровый и
-                ольховый стланник, переходя в каменноберезовый лес. Пройдя вдоль реки Горячей 12 км от перевала, вы
-                достигнете кордона «Центральный». Здесь, по предварительному бронированию, можно остановиться в домиках.
-                Если предпочитаете палатки, лагерь располагается на реке Жёлтая в 1,5 км от кордона.
-            </p>
-            <h2 class="podzagolovok-mars">Как добраться</h2>
-            <p class="paragraph_marsh">
-                К кордону «Пиначевский» можно доехать на любом автотранспорте. Адрес кордона: ул. Подгорная, 10, с.
-                Пиначево, Елизовский район, Камчатский край.
-            </p>
-            <h2 class="podzagolovok-mars">Полезная информация</h2>
-            <p class="paragraph_marsh">
-                Маршрут проходит по территории природного парка "Налычево". Для его посещения необходимо оформить
-                разрешение и оплатить рекреационный сбор в размере 500 рублей. Гостевые домики на кордоне Центральный
-                следует бронировать заранее через дирекцию парка.
-            </p>
-            <p class="paragraph_marsh">
-                При посещении парка обязательно соблюдайте правила пребывания на особо охраняемой природной территории.
-            </p>
+
+            <div class="row my-3">
+                <div class="col-2 d-grid ps-3">
+                    <a href="/nalychevo" class="btn btn-success d-flex">
+                        <i class="bi bi-arrow-return-left m-auto"></i>
+                    </a>
+                </div>
+                <div class="col-10 d-grid pe-3">
+                    <a class="btn btn-success d-flex" href="/map-nal-one">
+                        <i class="icon feather icon-compass fs-4 ms-auto mt-auto mb-auto pe-1"></i>
+                        <span class="fs-4 me-auto mt-auto mb-auto">Пройти маршрут</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col bg-white mx-3">
+                    <h2 class="podzagolovok-mars pt-2">1 день: Переход 17,5 км</h2>
+                    <p class="paragraph_marsh">
+                        Маршрут начинается от инспекторского кордона и следует вдоль реки Пиначевская. Первой остановкой
+                        является стоянка «Промежуточная», до которой около 12 км. Затем еще 5,5 км до стоянки кордона
+                        «Семеновский», где предусмотрена ночевка.
+                    </p>
+                    <h2 class="podzagolovok-mars pt-3">2 день: Переход 21 км</h2>
+                    <p class="paragraph_marsh">
+                        От кордона «Семеновский» начинается тропа к стоянке «Перевальная», расположенной в 4 км. Далее маршрут
+                        проходит через каменистый распадок и горную тундру, поднимаясь к Пиначевскому перевалу с высотой 1150
+                        метров. С перевала открывается великолепный вид на Налычевскую долину. Спуск проходит через кедровый и
+                        ольховый стланник, переходя в каменноберезовый лес. Пройдя вдоль реки Горячей 12 км от перевала, вы
+                        достигнете кордона «Центральный». Здесь, по предварительному бронированию, можно остановиться в домиках.
+                        Если предпочитаете палатки, лагерь располагается на реке Жёлтая в 1,5 км от кордона.
+                    </p>
+                    <h2 class="podzagolovok-mars pt-3">Как добраться</h2>
+                    <p class="paragraph_marsh">
+                        К кордону «Пиначевский» можно доехать на любом автотранспорте. Адрес кордона: ул. Подгорная, 10, с.
+                        Пиначево, Елизовский район, Камчатский край.
+                    </p>
+                    <h2 class="podzagolovok-mars pt-3">Полезная информация</h2>
+                    <p class="paragraph_marsh">
+                        Маршрут проходит по территории природного парка "Налычево". Для его посещения необходимо оформить
+                        разрешение и оплатить рекреационный сбор в размере 500 рублей. Гостевые домики на кордоне Центральный
+                        следует бронировать заранее через дирекцию парка.
+                    </p>
+                    <p class="paragraph_marsh py-3">
+                        При посещении парка обязательно соблюдайте правила пребывания на особо охраняемой природной территории.
+                    </p>
+                </div>
+            </div>
 <div class="niz-otstup"></div>
         </div>
     </div>
