update 12.06.2024 - доработаны ряд задач * отображение границ налычево * отображение треков парка налычево * авторизация * отправка изображений

--- a/www/m-n-two.html
+++ b/www/m-n-two.html
@@ -1,28 +1,46 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h1 class="podzagolovok-mars_bc_green">Пятая стройка – кордон Центральный</h1>
-            <div class="d-grid">
-                <button class="btn btn-success m-top-bt text-knopki" type="button"> <i class="icon feather icon-compass fs-4"></i> Пройти маршрут</button>
+            <div class="row">
+                <div class="col bg-secondary-subtle py-3">
+                    <p class="fs-4 text-center"><strong>Пятая стройка – кордон Центральный</strong></p>
+                </div>
             </div>
 
-            <p class="paragraph_marsh">
-                Маршрут от Петропавлоска-Камчатского через Корякский перевал и термальные источники в центр долины Налычева.
-            </p>
-             <h2 class="podzagolovok-mars">Протяженность</h2>
-            <p class="paragraph_marsh">
-                41км от СНТ "Сказка" до кордона "Центральный"
-            </p>
-            <h2 class="podzagolovok-mars">Ограничения</h2>
-            <p class="paragraph_marsh">
-                Маршрут используется только зимой и предназначен для передвижения на снегоходах и лыжах. Корякский перевал имеет категорию сложности 1А.
-            </p>
-            <h2 class="podzagolovok-mars">Активности</h2>
-            <p class="paragraph_marsh">
-                С декабря по май маршрут доступен для туристов на лыжах и снегоходах.
-            </p>
+            <div class="row my-3">
+                <div class="col-2 d-grid ps-3">
+                    <a href="/nalychevo" class="btn btn-success d-flex">
+                        <i class="bi bi-arrow-return-left m-auto"></i>
+                    </a>
+                </div>
+                <div class="col-10 d-grid pe-3">
+                    <a class="btn btn-success d-flex" href="/map-nal-two">
+                        <i class="icon feather icon-compass fs-4 ms-auto mt-auto mb-auto pe-1"></i>
+                        <span class="fs-4 me-auto mt-auto mb-auto">Пройти маршрут</span>
+                    </a>
+                </div>
+            </div>
 
-<div class="niz-otstup"></div>
+            <div class="row">
+                <div class="col bg-white mx-3">
+                    <p class="paragraph_marsh">
+                        Маршрут от Петропавловска-Камчатского через Корякский перевал и термальные источники в центр долины Налычева. Этот маршрут предлагает путешественникам уникальную возможность насладиться живописными видами Камчатки, пройти через разнообразные ландшафты, включая густые леса, снежные горные перевалы и термальные источники. Долина Налычева славится своими горячими источниками, где можно отдохнуть и восстановить силы, наслаждаясь природной красотой этого уникального уголка Камчатки.
+                    </p>
+                    <h2 class="podzagolovok-mars">Протяженность</h2>
+                    <p class="paragraph_marsh">
+                        41 км от СНТ "Сероглазка" до кордона "Центральный". Этот путь проходит через разнообразные природные зоны, позволяя туристам увидеть богатую флору и фауну региона. По дороге можно встретить различные виды растений, такие как кедровый стланик, березы и ели, а также редкие виды цветов, характерные для Камчатки.
+                    </p>
+                    <h2 class="podzagolovok-mars">Ограничения</h2>
+                    <p class="paragraph_marsh">
+                        Маршрут используется только зимой и предназначен для передвижения на снегоходах и лыжах. Корякский перевал имеет категорию сложности 1А. Туристам рекомендуется иметь опыт зимних походов и соответствующее снаряжение, так как погодные условия могут быть суровыми, а температура значительно ниже нуля.
+                    </p>
+                    <h2 class="podzagolovok-mars">Активности</h2>
+                    <p class="paragraph_marsh">
+                        С декабря по май маршрут доступен для туристов на лыжах и снегоходах. Это идеальное время для наблюдения за дикой природой, такой как лисы, зайцы и даже бурые медведи, которые могут быть замечены в их естественной среде обитания. Любители фотографирования смогут запечатлеть невероятные зимние пейзажи и разнообразие дикой природы Камчатки.
+                    </p>
+                </div>
+            </div>
+            <div class="niz-otstup"></div>
         </div>
     </div>
 </div>
