--- a/www/index.html
+++ b/www/index.html
@@ -47,8 +47,10 @@
                             <img id="photoPreview" class="img-thumbnail" src="" alt="Photo" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <select type="text" class="form-select" id="photoComment">
-                            <option>Экологическая проблема</option>
-                            <option>Точка интереса</option>
+                            <option>Лесной пожар</option>
+                            <option>Незаконная вырубка</option>
+                            <option>Браконьерство</option>
+                            <option>Свалочные очаги</option>
                         </select>
                     </div>
                     <div class="modal-footer">
@@ -100,6 +102,7 @@
         <script src="cordova.js"></script>
         <script src="js/borderParser.js"></script>
         <script src="js/trackParser.js"></script>
+        <script src="js/auth.js"></script>
         <script src="js/index.js"></script>
         <!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>-->
