--- a/www/m-n-three.html
+++ b/www/m-n-three.html
@@ -1,30 +1,48 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <h1 class="podzagolovok-mars_bc_green">Кордон Центральный – Таловские источники – вулкан Дзендзур</h1>
-            <div class="d-grid">
-                <button class="btn btn-success m-top-bt text-knopki" type="button"><i
-                        class="icon feather icon-compass fs-4"></i> Пройти маршрут
-                </button>
+            <div class="row">
+                <div class="col bg-secondary-subtle py-3">
+                    <p class="fs-4 text-center"><strong>Кордон Центральный – Таловские источники – вулкан Дзендзур</strong></p>
+                </div>
             </div>
 
-            <p class="paragraph_marsh">
-                Радиальный маршрут из центра долины Налычево, через горячие источники к вулкану Дзендзур.
-            </p>
-            <h2 class="podzagolovok-mars">Протяженность</h2>
-            <p class="paragraph_marsh">
-                Весь маршрут 46км. Время его прохождения пешком - 3 дня и 2 ночи
-            </p>
-            <h2 class="podzagolovok-mars">Ограничения</h2>
-            <p class="paragraph_marsh">
-                Маршрут используется летом с июня по октябрь. Следует передвигаться только по тропе. По маршруту
-                запрещено передвигаться на велосипедах и любых транспортных средствах.
-            </p>
-            <h2 class="podzagolovok-mars">Активности</h2>
-            <p class="paragraph_marsh">
-                С июня по октябрь маршрут доступен для пеших походов.
-            </p>
+            <div class="row my-3">
+                <div class="col-2 d-grid ps-3">
+                    <a href="/nalychevo" class="btn btn-success d-flex">
+                        <i class="bi bi-arrow-return-left m-auto"></i>
+                    </a>
+                </div>
+                <div class="col-10 d-grid pe-3">
+                    <a class="btn btn-success d-flex" href="/map-nal-three">
+                        <i class="icon feather icon-compass fs-4 ms-auto mt-auto mb-auto pe-1"></i>
+                        <span class="fs-4 me-auto mt-auto mb-auto">Пройти маршрут</span>
+                    </a>
+                </div>
+            </div>
 
+            <div class="row">
+                <div class="col bg-white mx-3">
+                    <p class="paragraph_marsh">
+                        Радиальный маршрут из центра долины Налычево, через горячие источники к вулкану Дзендзур. Этот маршрут позволяет путешественникам насладиться уникальной природой Камчатки, проходя через живописные ландшафты, разнообразные экосистемы и геотермальные зоны. Путешествие к вулкану Дзендзур предлагает возможность увидеть впечатляющие природные явления, такие как фумаролы и горячие источники, которые создают незабываемые впечатления.
+                    </p>
+                    <h2 class="podzagolovok-mars">Протяженность</h2>
+                    <p class="paragraph_marsh">
+                        Весь маршрут составляет 46 км. Время его прохождения пешком - 3 дня и 2 ночи. По дороге туристы могут наслаждаться панорамными видами на долину Налычева и окрестные горы, проходя через густые леса, альпийские луга и лавовые поля. Многочисленные реки и ручьи, встречающиеся на пути, дополняют живописность маршрута.
+                    </p>
+                    <h2 class="podzagolovok-mars">Ограничения</h2>
+                    <p class="paragraph_marsh">
+                        Маршрут используется летом с июня по октябрь. Следует передвигаться только по тропе. По маршруту запрещено передвигаться на велосипедах и любых транспортных средствах. Это связано с охраной природы и сохранением экосистемы региона. Туристам рекомендуется следовать установленным правилам и инструкциям, чтобы минимизировать воздействие на окружающую среду.
+                    </p>
+                    <h2 class="podzagolovok-mars">Активности</h2>
+                    <p class="paragraph_marsh">
+                        С июня по октябрь маршрут доступен для пеших походов. Путешествие к вулкану Дзендзур включает в себя такие активности, как наблюдение за дикой природой, фотографирование и купание в горячих источниках. На маршруте можно встретить разнообразных представителей фауны, таких как бурые медведи, лисы, зайцы и многочисленные виды птиц. Также туристы могут наслаждаться разнообразной флорой, включая кедровый стланик, березы, ели и редкие виды цветущих растений.
+                    </p>
+                    <p class="paragraph_marsh">
+                        Маршрут: Кордон Центральный – Таловские источники – вулкан Дзендзур. Этот путь предлагает уникальные возможности для знакомства с природным богатством Камчатки, включая вулканические и геотермальные объекты, которые делают это путешествие по-настоящему незабываемым.
+                    </p>
+                </div>
+            </div>
             <div class="niz-otstup"></div>
         </div>
     </div>
