--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
 
         <footer class="m-0 p-0">
             <div class="container p-3">
-                <div id="footerRow" class="row row-cols-4">
+                <div id="footerRow" class="row row-cols-3">
 
                     <div class="col">
                         <a href="/">
@@ -84,11 +84,11 @@
                             <img class="icons_niz expand" rel="image not found" src="img/icon/icon3.svg" alt="">
                         </a>
                     </div>
-                    <div class="col">
+                    <!--<div class="col">
                         <a href="/info">
                             <img class="icons_niz" rel="image not found" src="img/icon/icon4.svg" alt="">
                         </a>
-                    </div>
+                    </div>-->
                     <div class="col">
                         <a href="/profile">
                             <img class="icons_niz" rel="image not found" src="img/icon/icon5.svg" alt="">
