update 16.06.2024 - last update

--- a/www/m-n-three.html
+++ b/www/m-n-three.html
@@ -16,7 +16,7 @@
                 <div class="col-10 d-grid pe-3">
                     <a class="btn btn-success d-flex" href="/map-nal-three">
                         <i class="icon feather icon-compass fs-4 ms-auto mt-auto mb-auto pe-1"></i>
-                        <span class="fs-4 me-auto mt-auto mb-auto">Пройти маршрут</span>
+                        <span class="fs-4 me-auto mt-auto mb-auto">Регистрация на маршрут</span>
                     </a>
                 </div>
             </div>
